--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@ body {
   background-color: white;
   font-family: "Karla", sans-serif;
   font-size: 16px;
-  background-image: radial-gradient(circle at bottom right, #e66465 -30%, white, white);
   background-attachment: fixed;
 }
 
@@ -22,7 +21,7 @@ header {
   z-index: 3;
   top: 0;
   width: 100vw;
-  height: 5.8em;
+  height: 5em;
   background-color: white;
   backdrop-filter: blur(0.2em);
   box-shadow: 0 0 0.2em gray;
@@ -30,32 +29,22 @@ header {
 header h1 {
   z-index: 2;
   position: fixed;
-  top: 0.9em;
-  right: 2.2em;
-  font-family: "Cousine", monospace;
-  font-size: 1.5em;
+  top: 0.4em;
+  right: 1em;
+  font-family: "Rammetto One", cursive;
+  font-size: 1.7em;
   color: rgb(64, 0, 255);
   padding: 0.3em;
   padding-right: 0.6em;
   transition: 0.2s;
   mix-blend-mode: multiply;
-  transform: scale(2, 1) skewX(10deg);
-}
-header #head-square {
-  position: fixed;
-  top: -4em;
-  right: -2em;
-  background-color: rgb(137, 126, 109);
-  height: 9em;
-  width: 15em;
-  transform: skew(10deg, 15deg) rotateX(50deg);
 }
 header #head-circle {
   position: fixed;
-  top: -9em;
-  left: -6em;
-  height: 13em;
-  width: 13em;
+  top: -2.5em;
+  right: -1.6em;
+  height: 7em;
+  width: 7em;
   background-color: rgb(217, 235, 201);
   border-radius: 50%;
 }
@@ -67,9 +56,9 @@ header #head-circle {
   z-index: 100;
   position: fixed;
   top: 0.5em;
-  left: 0.5em;
-  font-size: 3em;
-  color: rgb(137, 126, 109);
+  left: 0.7em;
+  font-size: 2.5em;
+  color: black;
 }
 #nav-mob #nav-links-mob {
   position: fixed;
@@ -261,35 +250,270 @@ footer #contact-button {
   display: none;
 }
 
+@media only screen and (min-width: 450px) and (max-width: 799px) {
+  body {
+    position: relative;
+    background-color: white;
+    font-family: "Karla", sans-serif;
+    font-size: 16px;
+    background-attachment: fixed;
+  }
+
+  header {
+    position: fixed;
+    z-index: 3;
+    top: 0;
+    width: 100vw;
+    height: 5em;
+    background-color: white;
+    backdrop-filter: blur(0.2em);
+    box-shadow: 0 0 0.2em gray;
+  }
+  header h1 {
+    z-index: 2;
+    position: fixed;
+    top: 0.4em;
+    right: 1em;
+    font-family: "Rammetto One", cursive;
+    font-size: 1.7em;
+    color: rgb(64, 0, 255);
+    padding: 0.3em;
+    padding-right: 0.6em;
+    transition: 0.2s;
+    mix-blend-mode: multiply;
+  }
+  header #head-circle {
+    position: fixed;
+    top: -2.5em;
+    right: -1.6em;
+    height: 7em;
+    width: 7em;
+    background-color: rgb(217, 235, 201);
+    border-radius: 50%;
+  }
+
+  #nav-mob {
+    z-index: 100;
+  }
+  #nav-mob #nav-icon-mob {
+    z-index: 100;
+    position: fixed;
+    top: 0.5em;
+    left: 0.7em;
+    font-size: 2.5em;
+    color: black;
+  }
+  #nav-mob #nav-links-mob {
+    position: fixed;
+    top: 5.1em;
+    left: -30em;
+    transition: 0.2s;
+  }
+  #nav-mob #nav-links-mob ul {
+    position: relative;
+    z-index: 100;
+    height: 100vh;
+    padding-right: 5em;
+    min-width: 60vw;
+    max-width: 65vw;
+    background-color: white;
+    box-shadow: 0em 0em 1em 5em white;
+  }
+  #nav-mob #nav-links-mob li {
+    list-style: none;
+    font-family: "Karla", sans-serif;
+    font-size: 3em;
+    padding: 0.3em 0.3em 0.3em 3.5em;
+    transition: 0.5s;
+  }
+  #nav-mob #nav-links-mob li a, #nav-mob #nav-links-mob li a:visited {
+    text-decoration: none;
+    color: rgb(137, 126, 109);
+    font-style: italic;
+  }
+  #nav-mob #show {
+    display: none;
+  }
+  #nav-mob #show:checked ~ #nav-links-mob {
+    display: block;
+    transform: translateX(25em);
+  }
+
+  #menu-button,
+#menu-text,
+#nav-cont {
+    display: none;
+  }
+
+  main {
+    margin: 2em;
+    margin-top: 7em;
+    margin-bottom: 5em;
+  }
+
+  .mob-page-sub {
+    display: block;
+    position: absolute;
+    z-index: 1;
+    top: 4.1em;
+    right: 1em;
+    font-family: "Monaco", monospace;
+    color: rgb(53, 0, 213);
+  }
+
+  .desk-page-sub {
+    display: none;
+  }
+
+  .card {
+    border-radius: 2em 2em 2em 2em;
+    padding: 2em;
+    margin: 0em;
+    margin-top: 2em;
+    background-color: rgba(242, 253, 241, 0.1);
+    background-color: rgba(242, 253, 241, 0.1);
+  }
+  .card h2 {
+    color: rgb(67, 96, 64);
+    text-align: left;
+    left: 2em;
+  }
+
+  #about-img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%;
+    border-radius: 2em 2em 2em 2em;
+  }
+
+  #about-card {
+    border-radius: 2em 2em 2em 2em;
+    padding: 2em;
+    margin: 0em;
+    margin-top: 2em;
+    background-color: rgba(242, 253, 241, 0.1);
+  }
+  #about-card h2 {
+    color: rgb(67, 96, 64);
+    text-align: left;
+    left: 2em;
+  }
+
+  #about-buttons {
+    display: flex;
+    justify-content: space-between;
+    padding: 2em;
+  }
+  #about-buttons #personal-button-cont {
+    display: inline;
+  }
+  #about-buttons #personal-button-cont #personal-button {
+    background-color: rgb(64, 0, 255);
+    color: white;
+    border-radius: 0.4em 0.4em 0.4em 0.4em;
+    font-size: 1em;
+    padding: 0.5em;
+    border: none;
+    display: inline;
+  }
+  #about-buttons #projects-button-cont {
+    display: inline;
+  }
+  #about-buttons #projects-button-cont #projects-button {
+    background-color: rgb(64, 0, 255);
+    color: white;
+    border-radius: 0.4em 0.4em 0.4em 0.4em;
+    font-size: 1em;
+    padding: 0.5em;
+    border: none;
+    display: inline;
+  }
+
+  p {
+    font-size: 1.2em;
+  }
+
+  .blog-time {
+    color: rgb(137, 126, 109);
+  }
+
+  footer {
+    position: fixed;
+    bottom: 0em;
+    text-align: center;
+    background-color: white;
+    width: 100vw;
+    box-shadow: 0 0 0.2em gray;
+  }
+  footer form {
+    background-color: white;
+    width: 3em;
+    height: 3em;
+    bottom: 0em;
+  }
+  footer #contact-button {
+    background-color: rgb(64, 0, 255);
+    color: white;
+    border-radius: 0.4em 0.4em 0.4em 0.4em;
+    font-size: 1em;
+    padding: 0.5em;
+    border: none;
+    position: fixed;
+    bottom: 0.5em;
+    right: 0.5em;
+  }
+
+  #expand-1,
+#expand-icon-1,
+#expand-text-1 {
+    display: none;
+  }
+
+  #expand-2,
+#expand-icon-2,
+#expand-text-2 {
+    display: none;
+  }
+
+  #expand-3,
+#expand-icon-3,
+#expand-text-3 {
+    display: none;
+  }
+
+  #expand-4,
+#expand-icon-4,
+#expand-text-4 {
+    display: none;
+  }
+
+  #expand-5,
+#expand-icon-5,
+#expand-text-5 {
+    display: none;
+  }
+}
 @media only screen and (min-width: 800px) {
   header {
     position: relative;
     overflow: hidden !important;
     width: 100vw;
-    height: 15em;
+    height: 10em;
     box-shadow: none;
     background-color: rgba(255, 255, 255, 0);
   }
   header h1 {
-    font-size: 3.5em;
-    top: 0.4em;
-    right: 3em;
-    font-family: "Cousine", monospace;
-  }
-  header h1:hover {
-    transform: scale(1.5);
+    font-size: 4em;
+    top: 0em;
+    right: 1.1em;
   }
   header #head-circle {
     position: fixed;
-    left: -3em;
-  }
-  header #head-square {
-    position: absolute;
-    top: -8em;
-    right: -8em;
-    background-color: rgb(137, 126, 109);
-    height: 18em;
-    width: 30em;
+    top: -11em;
+    right: -6em;
+    width: 20em;
+    height: 20em;
   }
 
   #nav-mob {
@@ -340,7 +564,7 @@ footer #contact-button {
 
   #portrait {
     width: 5em;
-    margin: -2em 1em 0 0;
+    margin: 2em 1em 0 0;
     border-radius: 50%;
     border: 2px rgb(137, 126, 109) solid;
   }
@@ -348,10 +572,10 @@ footer #contact-button {
   #menu-text {
     display: inline-block;
     position: absolute;
-    top: 0.3em;
+    top: 3em;
     left: 1em;
     z-index: 50;
-    font-size: 3em;
+    font-size: 1.5em;
     transition: 0.1s;
   }
 
@@ -362,7 +586,9 @@ footer #contact-button {
 
   #arrow {
     position: absolute;
+    font-size: 2em;
     left: 0.1em;
+    top: 0.3em;
     -webkit-text-stroke: 8px white;
     transform: scale(1.2, 1);
   }
@@ -372,7 +598,6 @@ footer #contact-button {
   }
 
   body {
-    background-image: radial-gradient(circle at bottom right, #e66465 -30%, white, white);
     overflow-x: hidden;
   }
 
