--- a/style.css
+++ b/style.css
@@ -124,7 +124,7 @@ main {
 .card {
   border-radius: 2em 2em 2em 2em;
   padding: 2em;
-  margin: 0em;
+  margin: 0em -2.8em;
   margin-top: 2em;
   background-color: rgba(242, 253, 241, 0.1);
   background-color: rgba(242, 253, 241, 0.1);
@@ -146,7 +146,7 @@ main {
 #about-card {
   border-radius: 2em 2em 2em 2em;
   padding: 2em;
-  margin: 0em;
+  margin: 0em -2.8em;
   margin-top: 2em;
   background-color: rgba(242, 253, 241, 0.1);
 }
@@ -368,7 +368,7 @@ footer #contact-button {
   .card {
     border-radius: 2em 2em 2em 2em;
     padding: 2em;
-    margin: 0em;
+    margin: 0em -2.8em;
     margin-top: 2em;
     background-color: rgba(242, 253, 241, 0.1);
     background-color: rgba(242, 253, 241, 0.1);
@@ -390,7 +390,7 @@ footer #contact-button {
   #about-card {
     border-radius: 2em 2em 2em 2em;
     padding: 2em;
-    margin: 0em;
+    margin: 0em -2.8em;
     margin-top: 2em;
     background-color: rgba(242, 253, 241, 0.1);
   }
@@ -628,7 +628,7 @@ footer #contact-button {
   .card {
     border-radius: 2em 2em 2em 2em;
     padding: 2em;
-    margin: 0em;
+    margin: 0em -2.8em;
     margin-top: 2em;
     background-color: rgba(242, 253, 241, 0.1);
     background-color: rgba(242, 253, 241, 0.1);
@@ -886,7 +886,7 @@ footer #contact-button {
   #about-img-cont {
     border-radius: 2em 2em 2em 2em;
     padding: 2em;
-    margin: 0em;
+    margin: 0em -2.8em;
     margin-top: 2em;
     background-color: rgba(242, 253, 241, 0.1);
     background-color: rgba(242, 253, 241, 0.1);
@@ -923,7 +923,7 @@ footer #contact-button {
   #about-card {
     border-radius: 2em 2em 2em 2em;
     padding: 2em;
-    margin: 0em;
+    margin: 0em -2.8em;
     margin-top: 2em;
     background-color: rgba(242, 253, 241, 0.1);
     background-color: rgba(242, 253, 241, 0.1);
@@ -952,7 +952,7 @@ footer #contact-button {
   #about-buttons {
     border-radius: 2em 2em 2em 2em;
     padding: 2em;
-    margin: 0em;
+    margin: 0em -2.8em;
     margin-top: 2em;
     background-color: rgba(242, 253, 241, 0.1);
     background-color: rgba(242, 253, 241, 0.1);
