--- a/style.css
+++ b/style.css
@@ -161,22 +161,10 @@ main {
   justify-content: space-between;
   padding: 2em;
 }
-#about-buttons #personal-button-cont {
+#about-buttons .button-cont {
   display: inline;
 }
-#about-buttons #personal-button-cont #personal-button {
-  background-color: rgb(64, 0, 255);
-  color: white;
-  border-radius: 0.4em 0.4em 0.4em 0.4em;
-  font-size: 1em;
-  padding: 0.5em;
-  border: none;
-  display: inline;
-}
-#about-buttons #projects-button-cont {
-  display: inline;
-}
-#about-buttons #projects-button-cont #projects-button {
+#about-buttons .button-cont .button {
   background-color: rgb(64, 0, 255);
   color: white;
   border-radius: 0.4em 0.4em 0.4em 0.4em;
@@ -214,6 +202,16 @@ main {
   margin: 0 auto;
   width: 100%;
   border-radius: 1em 1em 1em 1em;
+}
+
+.clear-card {
+  display: flex;
+  justify-content: space-between;
+  padding: 2em;
+}
+.clear-card .logo {
+  width: 5vw;
+  min-height: 15vw;
 }
 
 p {
@@ -432,36 +430,6 @@ footer #contact-button {
     left: 2em;
   }
 
-  #about-buttons {
-    display: flex;
-    justify-content: space-between;
-    padding: 2em;
-  }
-  #about-buttons #personal-button-cont {
-    display: inline;
-  }
-  #about-buttons #personal-button-cont #personal-button {
-    background-color: rgb(64, 0, 255);
-    color: white;
-    border-radius: 0.4em 0.4em 0.4em 0.4em;
-    font-size: 1em;
-    padding: 0.5em;
-    border: none;
-    display: inline;
-  }
-  #about-buttons #projects-button-cont {
-    display: inline;
-  }
-  #about-buttons #projects-button-cont #projects-button {
-    background-color: rgb(64, 0, 255);
-    color: white;
-    border-radius: 0.4em 0.4em 0.4em 0.4em;
-    font-size: 1em;
-    padding: 0.5em;
-    border: none;
-    display: inline;
-  }
-
   p {
     font-size: 1.2em;
   }
@@ -641,7 +609,7 @@ footer #contact-button {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: flex-start;
+    justify-content: center;
   }
 
   .mob-page-sub {
@@ -652,6 +620,7 @@ footer #contact-button {
     display: block;
     position: absolute;
     top: 8em;
+    left: 0em;
     font-family: "Monaco", monospace;
     font-size: 1.2em;
     color: rgb(53, 0, 213);
@@ -1008,7 +977,7 @@ footer #contact-button {
   #about-buttons h2 {
     color: rgb(67, 96, 64);
   }
-  #about-buttons #personal-button-cont #personal-button {
+  #about-buttons .button-cont .button {
     background-color: rgb(53, 0, 213);
     color: white;
     border-radius: 0.4em 0.4em 0.4em 0.4em;
@@ -1016,23 +985,8 @@ footer #contact-button {
     padding: 0.5em;
     border: none;
     transition: 0.1s;
-    pointer-events: auto;
   }
-  #about-buttons #personal-button-cont #personal-button:hover {
-    cursor: pointer;
-    background-color: rgb(64, 0, 255);
-  }
-  #about-buttons #projects-button-cont #projects-button {
-    background-color: rgb(53, 0, 213);
-    color: white;
-    border-radius: 0.4em 0.4em 0.4em 0.4em;
-    font-size: 1em;
-    padding: 0.5em;
-    border: none;
-    transition: 0.1s;
-    pointer-events: auto;
-  }
-  #about-buttons #projects-button-cont #projects-button:hover {
+  #about-buttons .button-cont .button:hover {
     cursor: pointer;
     background-color: rgb(64, 0, 255);
   }
@@ -1044,10 +998,16 @@ footer #contact-button {
     width: 40vw;
     height: min-content;
     align-self: space-between;
-    background-color: white;
+    background-color: rgba(242, 253, 241, 0.1);
     border-radius: 2em 2em 2em 2em;
     color: rgba(49, 49, 49, 0.867);
-    box-shadow: rgba(0, 0, 0, 0.1) 0em 0em 1em;
+    background-color: rgba(242, 253, 241, 0.1);
+    margin: 2em 0em 0em 2em;
+    width: 40vw;
+    transition: 0.5s;
+    overflow: hidden;
+    position: relative;
+    box-shadow: none;
   }
   .card-dark h2 {
     color: rgb(67, 96, 64);
@@ -1068,49 +1028,89 @@ footer #contact-button {
     width: 100%;
     border-radius: 1em 1em 1em 1em;
   }
-
-  p {
-    font-size: 1.2em;
-  }
-
-  p::selection {
+  .card-dark:hover {
     background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.1) 0em 0em 1em;
   }
 
-  ::selection {
-    background: none;
+  h2 {
+    color: rgb(67, 96, 64);
   }
+}
+.clear-card {
+  border-radius: 2em 2em 2em 2em;
+  padding: 2em;
+  margin: 0em -2em;
+  margin-top: 2em;
+  background-color: rgba(242, 253, 241, 0.1);
+  background-color: rgba(242, 253, 241, 0.1);
+  margin: 2em 0em 0em 2em;
+  width: 100vw;
+  max-height: 40vw;
+  transition: 0.5s;
+  overflow: hidden;
+  position: relative;
+  background: none;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+.clear-card h2 {
+  color: rgb(67, 96, 64);
+  text-align: left;
+  left: 2em;
+}
+.clear-card h2 {
+  color: rgb(67, 96, 64);
+}
+.clear-card .logo {
+  width: 10vw;
+  min-height: 10vw;
+  display: inline;
+}
 
-  footer {
-    position: fixed;
-    bottom: 0em;
-    text-align: center;
-    background-color: white;
-    width: 150vw;
-    border: rgb(183, 183, 183) 1px solid;
-  }
-  footer form {
-    background-color: white;
-    width: 3em;
-    height: 3em;
-    bottom: 0em;
-  }
-  footer #contact-button {
-    background-color: rgb(53, 0, 213);
-    color: white;
-    border-radius: 0.4em 0.4em 0.4em 0.4em;
-    font-size: 1em;
-    padding: 0.5em;
-    border: none;
-    transition: 0.1s;
-    position: fixed;
-    bottom: 0.5em;
-    right: 0.5em;
-  }
-  footer #contact-button:hover {
-    cursor: pointer;
-    background-color: rgb(64, 0, 255);
-  }
+p {
+  font-size: 1.2em;
+}
+
+p::selection {
+  background-color: white;
+}
+
+::selection {
+  background: none;
+}
+
+footer {
+  position: fixed;
+  bottom: 0em;
+  text-align: center;
+  background-color: white;
+  width: 150vw;
+  border: rgb(183, 183, 183) 1px solid;
+}
+footer form {
+  background-color: white;
+  width: 3em;
+  height: 3em;
+  bottom: 0em;
+}
+footer #contact-button {
+  background-color: rgb(53, 0, 213);
+  color: white;
+  border-radius: 0.4em 0.4em 0.4em 0.4em;
+  font-size: 1em;
+  padding: 0.5em;
+  border: none;
+  transition: 0.1s;
+  position: fixed;
+  bottom: 0.5em;
+  right: 0.5em;
+}
+footer #contact-button:hover {
+  cursor: pointer;
+  background-color: rgb(64, 0, 255);
 }
 
 /*# sourceMappingURL=style.css.map */
