--- a/style.scss
+++ b/style.scss
@@ -61,11 +61,10 @@ $monaco: 'Monaco', monospace;
         }
 }
 
-
-
 @mixin card-border() {
     border-radius: 2em 2em 2em 2em;
 }
+
 @mixin mob-button() {
         background-color: $purple;
         color: $white;
@@ -73,6 +72,12 @@ $monaco: 'Monaco', monospace;
         font-size: 1em;
         padding: 0.5em;
         border: none; // removed default "button" border
+}
+
+@mixin clear-card-mob () {
+        display: flex;
+        justify-content: space-between;
+        padding: 2em;
 }
 
 //DESKTOP
@@ -85,16 +90,25 @@ $monaco: 'Monaco', monospace;
         transition: 0.5s; // > AND FIXED FLICKERING IN BETWEEEN SECTIONS!
         overflow: hidden; // make cards only hold so much text...
         position: relative; // then have a hacky "fade-out" effect
-        &:hover {  // increases opacity when hover over section
-            background-color: $white;
-            box-shadow: rgb(0,0,0,0.1) 0em 0em 1em;
-            width: 100vw;
+            &:hover {  // increases opacity when hover over section
+                background-color: $white;
+                box-shadow: rgb(0,0,0,0.1) 0em 0em 1em;
+                width: 100vw;
+                }
+            h2 {
+                color: $pine;
             }
-        h2 {
-            color: $pine;
-        }
     }
     
+@mixin clear-card-desk() {
+        @include card-desk-no-hover();
+        background: none;
+        display: flex; 
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+}
+
 @mixin card-desk-no-hover() {
     @include card(); // includes the card @mixin
         background-color: rgb(242, 253, 241, 0.1);
@@ -115,10 +129,9 @@ $monaco: 'Monaco', monospace;
     width: 40vw;
     height: min-content;
     align-self: space-between;
-    background-color: $white;
+    background-color: rgb(242, 253, 241, 0.1);
     border-radius: 2em 2em 2em 2em; 
     color: $black; 
-    box-shadow: rgb(0,0,0,0.1) 0em 0em 1em;
     h2 {
         color: $pine;
         text-align: center;
@@ -185,167 +198,157 @@ html, body {
 
 
 //////// /////////////MOBILE///////////////////////
-// @media only screen and (min-width: 0px) and (max-width:449px) {
-    body {
-        position: relative; // allows me to {fix} other items
-        background-color: $white; // just in case gradient doesn't work
-        font-family: $karla;
-        font-size: 16px;
-        // background-image: radial-gradient(circle at bottom right, #e66465 -30%, $white, $white); // red circle gradient from bottom right
-        background-attachment: fixed; /// !FIXES BACKGROUND GRADIENT WHEN SCROLL!
-    }
+body {
+    position: relative; // allows me to {fix} other items
+    background-color: $white; // just in case gradient doesn't work
+    font-family: $karla;
+    font-size: 16px;
+    // background-image: radial-gradient(circle at bottom right, #e66465 -30%, $white, $white); // red circle gradient from bottom right
+    background-attachment: fixed; /// !FIXES BACKGROUND GRADIENT WHEN SCROLL!
+}
 
-    //////// HEADER MODULE
-    header {
-        position: fixed; // keeps header/navbar at top when scrolling
-        z-index: 3; // layers elements depending on index value
-        top: 0; // prevents header from dropping when I adjust <main>!
-        width: 100vw;
-        height: 5em;
-        background-color: $white;
-        backdrop-filter: blur(.2em); // !h1 un-fixes when I remove???!
-        box-shadow: 0 0 0.2em gray; // slight box shadow
-        h1 {
-            z-index: 2; // title on top of shape
-            position: fixed;
-            top: 0.4em; 
-            right: 1em;
-            font-family: $rammetto;
-            font-size: 1.7em;
-            color: $purple;
-            padding: 0.3em;
-            padding-right: 0.6em;
-            transition: 0.2s;
-            mix-blend-mode: multiply; // darkens title when meets brown square
-            // transform: scale(2, 1) skewX(10deg); // skews title
-        }
-        #head-circle {
-            position: fixed;
-            top: -2.5em;
-            right: -1.6em;
-            height: 7em;
-            width: 7em;
-            background-color: $mint;
-            border-radius: 50%;
-        }
-    }
-
-    ////////////MOBILE NAV MENU
-    #nav-mob {
-        z-index: 100;
-        #nav-icon-mob {
-            z-index: 100;
-            position: fixed;
-            top: 0.5em;
-            left: 0.7em;
-            font-size: 2.5em;
-            color: $black;
-        }
-        #nav-links-mob {
-            position: fixed;
-            top: 5.1em;
-            // left: -22.2em;
-            left: -30em;
-            transition: 0.2s;
-            ul {
-                position: relative;
-                z-index: 100; // remove if page name doesnt dissappear
-                height: 100vh; //makes the sidebar take up full vertical height
-                padding-right: 5em;
-                width: 100vw;
-                background-color: $white;
-                box-shadow: 0em 0em 1em 5em $white;
-            }
-            li {
-                list-style: none;
-                font-family: $karla;
-                font-size: 3em;
-                // text-shadow: $lavendar 5px 5px 1px;
-                // border: 3px solid $pine;
-                padding: .3em .3em .3em 3.5em;
-                transition: 0.5s;
-                a, a:visited {
-                    text-decoration: none;
-                    color: $black;
-                    font-style: none;
-                }
-            }
-        }
-        #show {
-            display: none;
-        }
-        #show:checked ~ #nav-links-mob {
-            display: block;
-            transform: translateX(25em);
-        }
-    }
-
-    #menu-button,
-    #menu-text,
-    #nav-cont {
-        display: none;
-    }
-
-
-
-
-
-
-    ///////MAIN SECTION    
-    main {
-        margin: 2em;
-        margin-top: 7em;
-        margin-bottom: 5em;
-    }
-    .mob-page-sub {
-        display: block;
-        position: absolute;
-        z-index: 1;
-        top: 4.1em;
+//////// HEADER MODULE
+header {
+    position: fixed; // keeps header/navbar at top when scrolling
+    z-index: 3; // layers elements depending on index value
+    top: 0; // prevents header from dropping when I adjust <main>!
+    width: 100vw;
+    height: 5em;
+    background-color: $white;
+    backdrop-filter: blur(.2em); // !h1 un-fixes when I remove???!
+    box-shadow: 0 0 0.2em gray; // slight box shadow
+    h1 {
+        z-index: 2; // title on top of shape
+        position: fixed;
+        top: 0.4em; 
         right: 1em;
-        font-family: $monaco;
-        color: $dark-purple;
+        font-family: $rammetto;
+        font-size: 1.7em;
+        color: $purple;
+        padding: 0.3em;
+        padding-right: 0.6em;
+        transition: 0.2s;
+        mix-blend-mode: multiply; // darkens title when meets brown square
+        // transform: scale(2, 1) skewX(10deg); // skews title
     }
-    .desk-page-sub {
+    #head-circle {
+        position: fixed;
+        top: -2.5em;
+        right: -1.6em;
+        height: 7em;
+        width: 7em;
+        background-color: $mint;
+        border-radius: 50%;
+    }
+}
+
+////////////MOBILE NAV MENU
+#nav-mob {
+    z-index: 100;
+    #nav-icon-mob {
+        z-index: 100;
+        position: fixed;
+        top: 0.5em;
+        left: 0.7em;
+        font-size: 2.5em;
+        color: $black;
+    }
+    #nav-links-mob {
+        position: fixed;
+        top: 5.1em;
+        // left: -22.2em;
+        left: -30em;
+        transition: 0.2s;
+        ul {
+            position: relative;
+            z-index: 100; // remove if page name doesnt dissappear
+            height: 100vh; //makes the sidebar take up full vertical height
+            padding-right: 5em;
+            width: 100vw;
+            background-color: $white;
+            box-shadow: 0em 0em 1em 5em $white;
+        }
+        li {
+            list-style: none;
+            font-family: $karla;
+            font-size: 3em;
+            // text-shadow: $lavendar 5px 5px 1px;
+            // border: 3px solid $pine;
+            padding: .3em .3em .3em 3.5em;
+            transition: 0.5s;
+            a, a:visited {
+                text-decoration: none;
+                color: $black;
+                font-style: none;
+            }
+        }
+    }
+    #show {
         display: none;
     }
-
-    .card {
-        @include card();
-        background-color: rgb(242, 253, 241, 0.1);
-    }
-
-
-    /////ABOUT ME PAGE MOBILE
-    #about-img {
+    #show:checked ~ #nav-links-mob {
         display: block;
-        margin-left: auto;
-        margin-right: auto;
-        width: 80%;
-        @include card-border();
+        transform: translateX(25em);
     }
-    #about-card {
-        @include card();
-    }
-    #about-buttons { 
-            display: flex;
-            justify-content: space-between;
-            padding: 2em;
-        #personal-button-cont {
-            display: inline;
-                #personal-button {
-                    @include mob-button();
-                    display: inline;
-                }
+}
+
+#menu-button,
+#menu-text,
+#nav-cont {
+    display: none;
+}
+
+
+
+
+
+
+///////MAIN SECTION    
+main {
+    margin: 2em;
+    margin-top: 7em;
+    margin-bottom: 5em;
+}
+.mob-page-sub {
+    display: block;
+    position: absolute;
+    z-index: 1;
+    top: 4.1em;
+    right: 1em;
+    font-family: $monaco;
+    color: $dark-purple;
+}
+.desk-page-sub {
+    display: none;
+}
+
+.card {
+    @include card();
+    background-color: rgb(242, 253, 241, 0.1);
+}
+
+
+/////ABOUT ME PAGE MOBILE
+#about-img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%;
+    @include card-border();
+}
+#about-card {
+    @include card();
+}
+#about-buttons { 
+        @include clear-card-mob();
+            .button-cont {
+                display: inline;
+                    .button {
+                        @include mob-button();
+                        display: inline;
+                    }
         }
-        #projects-button-cont {
-            display: inline;
-                #projects-button {
-                    @include mob-button();
-                    display: inline;
-                }
-        }
-    }
+}
 
 
 
@@ -354,6 +357,16 @@ html, body {
     @include card-dark-mob();
 }
 
+////////////CONTACT PAGE MOBILE///////////
+.clear-card {
+    @include clear-card-mob();
+    .logo {
+        width: 5vw;
+        min-height: 15vw;
+        // display: inline;
+    }
+    
+}
 
 
 
@@ -417,6 +430,8 @@ html, body {
         display: none;   ////////// card expand text/icon not on mobile
     }
 // }
+
+
 
 
 
@@ -570,25 +585,7 @@ html, body {
     #about-card {
         @include card();
     }
-    #about-buttons { 
-            display: flex;
-            justify-content: space-between;
-            padding: 2em;
-        #personal-button-cont {
-            display: inline;
-                #personal-button {
-                    @include mob-button();
-                    display: inline;
-                }
-        }
-        #projects-button-cont {
-            display: inline;
-                #projects-button {
-                    @include mob-button();
-                    display: inline;
-                }
-        }
-    }
+
 
 
     p {
@@ -801,7 +798,7 @@ html, body {
         display: flex; 
         flex-direction: row;
         flex-wrap: wrap;
-        justify-content: flex-start;
+        justify-content: center;
     }
     .mob-page-sub {
         display: none;
@@ -810,6 +807,7 @@ html, body {
         display: block;
         position: absolute;
         top: 8em;
+        left: 0em;
         font-family: $monaco;
         font-size: 1.2em;
         color: $dark-purple;
@@ -1034,46 +1032,7 @@ html, body {
 
     //////////////
 
-    ///// HOVER TO FOCUS SECTION v2
-    // .card:hover {  // increases opacity when hover over section
-    //     background-color: $white;
-    //     box-shadow: gray 0em 0em 2em;
-    //     width: 100vw;
-    //     }
-    // #expand-1:hover ~ #sec-1 { // keeps the opacity when hover over icon too
-    //     background-color: $white;
-    //     box-shadow: gray 0em 0em 2em;
-    //     width: 100vw;
-    //     flex-wrap: nowrap;
-    // }
-    // #expand-2:hover ~ #sec-2 { // keeps the opacity when hover over icon too
-    //     background-color: $white;
-    //     box-shadow: gray 0em 0em 2em;
-    //     width: 100vw;
-    //     flex-wrap: nowrap;
-    // }
-    // #expand-3:hover ~ #sec-3 { // keeps the opacity when hover over icon too
-    //     background-color: $white;
-    //     box-shadow: gray 0em 0em 2em;
-    //     width: 100vw;
-    //     flex-wrap: nowrap;
-    // }
-    // #expand-4:hover ~ #sec-4 { // keeps the opacity when hover over icon too
-    //     background-color: $white;
-    //     box-shadow: gray 0em 0em 2em;
-    //     width: 100vw;
-    //     flex-wrap: nowrap;
-    // }
-    // #expand-5:hover ~ #sec-5 { // keeps the opacity when hover over icon too
-    //     background-color: $white;
-    //     box-shadow: gray 0em 0em 2em;
-    //     width: 100vw;
-    //     flex-wrap: nowrap;
-    // }
-    ////////////////
-
 /////////ABOUT PAGE DESKTOP
-/////ABOUT ME PAGE
 #about-img-cont {
     @include card-desk();
     pointer-events: none; /////////// disables hover effect from @mixin easily!
@@ -1090,6 +1049,7 @@ html, body {
     @include card-desk();
     max-height: min-content;
 }
+
 #about-buttons { 
         @include card-desk-no-hover();
         background: none;
@@ -1097,24 +1057,43 @@ html, body {
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: space-evenly;
-    #personal-button-cont {
-            #personal-button {
-                @include desk-button();
-                pointer-events: auto;  ////adds hover back
-            }
-    }
-    #projects-button-cont {
-            #projects-button {
-                @include desk-button();
-                pointer-events: auto;
-            }
+    .button-cont {
+        .button {
+            @include desk-button();
+        }
     }
 }
 
-
-///////////////CODE PAGE////////////
+///////////////CODE PAGE DESKTOP////////////
 .card-dark {
-    @include card-dark-desk;
+    @include card-dark-desk(); // includes the card @mixin
+    background-color: rgb(242, 253, 241, 0.1);
+    margin: 2em 0em 0em 2em;
+    width: 40vw; //USING MAX-HEIGHT INSTEAD OF HEIGHT ALLOWS TRANSITION
+    transition: 0.5s; // > AND FIXED FLICKERING IN BETWEEEN SECTIONS!
+    overflow: hidden; // make cards only hold so much text...
+    position: relative; // then have a hacky "fade-out" effect
+    box-shadow: none;
+    &:hover {  // increases opacity when hover over section
+        background-color: $white;
+        box-shadow: rgb(0,0,0,0.1) 0em 0em 1em;
+        }
+    }
+    h2 {
+        color: $pine;
+    }
+}
+
+////////////CONTACT PAGE DESKTOP///////////
+
+.clear-card {
+    @include clear-card-desk();
+    .logo {
+        width: 10vw;
+        min-height: 10vw;
+        display: inline;
+    }
+    
 }
 
 
@@ -1157,6 +1136,6 @@ html, body {
 
 
 
-}
+
 
 ///////////////////////////////////////
